# kek

./: .gitignore  .pre-commit-config.yaml  .release.toml  CHANGELOG.md  LICENSE  README.md  main.py  parse.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  setup_release.py
.github/workflows/: ci.yml  python-tests.yml  release.yml
src/aa_helper/: cli.py  debug.py  hashing.py  parsing.py  test_hashing.py  utils.py
src/aa_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kek/: __init__.py  check.py  cli.py  constants.py  debug.py  explain.py  format.py  hashing.py  parsing.py  signature.py  simulate.py  utils.py
tests/: test_cli.py  test_hashing.py
